--- a/contact/contact.html
+++ b/contact/contact.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Portfolio - Contact</title>
-    <link rel="stylesheet" href="CSS/portfolio.css">
+    <link rel="stylesheet" href="./../CSS/portfolio.css">
 </head>
 <body>
     <header>
         <div class="title">
             <div class="logoAcceuil">
-                <a href="./index.html" class="lienAcceuil"><img class="imageAcceuil" src="Icon/logoAcceuil.png" alt="image acceuil"></a>
+                <a href="./../index.html" class="lienAcceuil"><img class="imageAcceuil" src="./../Icon/logoAcceuil.png" alt="image acceuil"></a>
             </div>
-            <a href="./index.html"><h1 class="title">Portfolio</h1></a>
-            <a href="./contact.html" class="lienContact"><img class="contact" src="Icon/contact.png" alt="photo de contact"></a>     
+            <a href="./../index.html"><h1 class="title">Portfolio</h1></a>
+            <a href="./../contact/contact.html" class="lienContact"><img class="contact" src="./../Icon/contact.png" alt="photo de contact"></a>     
         </div>
     </header>
     <div class="meContacter">
