--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Portfolio - Acceuil</title>
-    <link rel="stylesheet" href="CSS/portfolio.css">
+    <link rel="stylesheet" href="./CSS/portfolio.css">
     <link rel="stylesheet" media="screen and (width:800px)" href="mobile.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
                 <a href="./index.html" class="lienAcceuil"><img class="imageAcceuil" src="Icon/logoAcceuil.png" alt="image acceuil"></a>
             </div>
             <a href="./index.html"><h1 class="title">Portfolio</h1></a>
-            <a href="./contact.html" class="lienContact"><img class="contact" src="Icon/contact.png" alt="photo de contact"></a>     
+            <a href="./contact/contact.html" class="lienContact"><img class="contact" src="Icon/contact.png" alt="photo de contact"></a>     
         </div>
     </header>
     <div class="main">
