--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <a href="./index.html" class="lienAcceuil"><img class="imageAcceuil" src="Icon/logoAcceuil.png" alt="image acceuil"></a>
             </div>
             <a href="./index.html"><h1 class="title">Portfolio</h1></a>
-            <a href="/contact/index.html" class="lienContact"><img class="contact" src="Icon/contact.png" alt="photo de contact"></a>     
+            <a href="/portfolio/contact/index.html" class="lienContact"><img class="contact" src="Icon/contact.png" alt="photo de contact"></a>     
         </div>
     </header>
     <div class="main">
