ajout du slide pour la création d'entreprise

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
                         <img class="installationPoste" src="Image/InstallationPoste_preview.PNG" alt=""></img>
                     </a>
                 </div>
+                <div class="ensembleCreaEntreprise">
+                    <a href="Image/ProjetCreationEntreprise_slide.pdf" class="slide">
+                        <img class="Entreprise" src="Image/entrprise.jpg" alt="Logo de l'entreprise"></img>
+                    </a>
+                </div>
             </div>
         </div>
         <div class="ensemblefrise">
