Ajout des slides pour la JPO et le WEB

--- a/index.html
+++ b/index.html
@@ -36,12 +36,20 @@
                 </a>
             </div>
             <div class="ensembleUn">
-                    <a href="Image/ProjetInstallationPoste_Slide.pdf" class="slide">
-                        <img class="installationPoste" src="Image/InstallationPoste_preview.PNG" alt=""></img>
-                    </a>
-                    <a href="Image/ProjetCreationEntreprise_slide.pdf" class="slide">
-                        <img class="Entreprise" src="Image/entrprise.jpg" alt="Logo de l'entreprise"></img>
-                    </a>
+                <a href="Image/ProjetInstallationPoste_Slide.pdf" class="slide">
+                    <img class="installationPoste" src="Image/InstallationPoste_preview.PNG" alt="Bureau de la machine virtuelle"></img>
+                </a>
+                <a href="Image/ProjetCreationEntreprise_slide.pdf" class="slide">
+                    <img class="Entreprise" src="Image/entrprise.jpg" alt="Logo de l'entreprise"></img>
+                </a>
+            </div>
+            <div class="ensembleUn">
+                <a href="Image/ProjetWeb_slide.pdf" class="slide">
+                    <img class="siteWeb" src="Image/WEB.PNG" alt="Maquette du site"></img>
+                </a>
+                <a href="Image/ProjetJPO.pdf" classe="slide">
+                    <img class="JPO" src="Image/JPO.png" alt="Menu du jeu de la JPO"></img>
+                </a>
             </div>
         </div>
         <div class="ensemblefrise">
