--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <a href="Image/ProjetWeb_slide.pdf" class="slide">
                     <img class="siteWeb" src="Image/WEB.PNG" alt="Maquette du site"></img>
                 </a>
-                <a href="Image/ProjetJPO.pdf" classe="slide">
+                <a href="Image/ProjetJPO.pdf" class="slide">
                     <img class="JPO" src="Image/JPO.png" alt="Menu du jeu de la JPO"></img>
                 </a>
             </div>
