--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h2>Qui suis-je ?</h2>
         <div class="presRapide">
             <p>Je m'appelle Maël Jansen, je suis un étudiant en BUT informatique intérresser par le monde des technologies et je suis a la recherche d'un stage pour pouvoir acquérir de l'éxpérience dans le milieu profesionnel.</p>
-            <p>L'informatique est un domaine que je trouve intérressant et dans lequel j'aimerais me developper et acquérir de compétences requise dans le milleu profesionnel.</p>
+            <p>L'informatique est un domaine que je trouve intérressant et dans lequel j'aimerais me developper et acquérir de compétences requise dans le milieu profesionnel.</p>
         </div>
     </div>
     <div class="space"></div>
@@ -76,7 +76,7 @@
                         <div class="marker"></div>
                         <div class="contenu">
                             <h3>2022-2023</h3>
-                            <p>Contenu a ajouter</p>
+                            <p>(deuxième année de BUT + stages)</p>
                         </div>
 
                     </div>
