--- a/contact/index.html
+++ b/contact/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="infoPerso">
         <h3>Mes informations personelles</h3>
-        <p class="mailEtTel">Mail professionnel : a faire</p>
+        <p class="mailEtTel">Mail professionnel : maeljansen.pro@gmail.com</p>
         <p class="mailEtTel">Mail académique : mael.jansen@etu.u-bordeaux.fr</p>
         <p class="mailEtTel">numéro de téléphone : 07.71.23.07.49</p>
     </div>
